@@ -69,7 +69,7 @@ ext {
     reformLogging= '5.1.1-BETA'
     restAssuredVersion = '4.3.0!!'
     groovyVersion = '3.0.2!!'
-    tomcatVersion = '9.0.43!!'
+    tomcatVersion = '9.0.50!!'
     hibernateVersion = '5.4.24.Final!!'
     limits = [
             'instruction': 99,
@@ -129,6 +129,7 @@ allprojects {
         testCompile "org.codehaus.groovy:groovy:${groovyVersion}"
         testCompile "org.codehaus.groovy:groovy-xml:${groovyVersion}"
         testCompile "org.codehaus.groovy:groovy-json:${groovyVersion}"
+        testCompile 'com.github.hmcts:fortify-client:1.2.0:all'
     }
 
     configurations.all {
@@ -268,7 +269,7 @@ subprojects { subproject ->
         testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: powermockVersion
         testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: powermockVersion
         testCompile group: 'com.github.hmcts', name: 'ccd-test-definitions', version: '7.0.0'
-        testCompile group: 'com.github.hmcts', name: 'befta-fw', version: '8.2.0'
+        testCompile group: 'com.github.hmcts', name: 'befta-fw', version: '8.3.0'
         // https://mvnrepository.com/artifact/junit/junit
         compile group: 'junit', name: 'junit', version: '4.13.1'
         testCompile 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.4.0'
@@ -457,6 +458,12 @@ task sendCoverageToCodacy(type: JavaExec, dependsOn: jacocoTestReport) {
             "-r",
             "${buildDir}/reports/jacoco/jacocoTestReport.xml"
     ]
+}
+
+task fortifyScan(type: JavaExec)  {
+    main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+    classpath += sourceSets.test.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 cucumberReports {
